// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct form for clicking forgot mfa device 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c7:hover,
.c7:focus {
  background: #B29DFF;
}

.c7:active {
  background: #C5B6FF;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 704px;
  background-color: #222C59;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c6 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c6:hover,
.c6:focus,
.c6:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c6::-ms-clear {
  display: none;
}

.c6::placeholder {
  color: rgba(255,255,255,0.54);
}

.c6:read-only {
  cursor: not-allowed;
}

.c6:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

<form
  class="c0"
  width="704px"
>
  <div
    class="c1"
    color="text.main"
  >
    Two-Factor Device Recovery
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
      color="text.slightlyMuted"
    >
      Please enter the username for your account and one of your recovery codes. We'll send you an email with a link to the recovery process for your account.
    </div>
    <div
      class="c4"
      width="100%"
    >
      <label
        class="c5"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c6"
          inputmode="text"
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      class="c4"
      width="100%"
    >
      <label
        class="c5"
        font-size="0"
      >
        Recovery Code (Use 1 Recovery Code)
        <input
          autocomplete="off"
          class="c6"
          inputmode="text"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="c7"
      kind="primary"
      type="submit"
      width="100%"
    >
      Send Recovery Email
    </button>
  </div>
</form>
`;

exports[`render correct form for clicking forgot password 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c7:hover,
.c7:focus {
  background: #B29DFF;
}

.c7:active {
  background: #C5B6FF;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 704px;
  background-color: #222C59;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
}

.c6 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c6:hover,
.c6:focus,
.c6:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c6::-ms-clear {
  display: none;
}

.c6::placeholder {
  color: rgba(255,255,255,0.54);
}

.c6:read-only {
  cursor: not-allowed;
}

.c6:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

<form
  class="c0"
  width="704px"
>
  <div
    class="c1"
    color="text.main"
  >
    Password Recovery
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
      color="text.slightlyMuted"
    >
      Please enter the username for your account and one of your recovery codes. We'll send you an email with a link to the recovery process for your account.
    </div>
    <div
      class="c4"
      width="100%"
    >
      <label
        class="c5"
        font-size="0"
      >
        Username
        <input
          autocomplete="off"
          class="c6"
          inputmode="text"
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      class="c4"
      width="100%"
    >
      <label
        class="c5"
        font-size="0"
      >
        Recovery Code (Use 1 Recovery Code)
        <input
          autocomplete="off"
          class="c6"
          inputmode="text"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="c7"
      kind="primary"
      type="submit"
      width="100%"
    >
      Send Recovery Email
    </button>
  </div>
</form>
`;
